<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mail_address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password_label"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.wanpaku.pochi.infra.ui.widget.TwoStateButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginLeft="@dimen/space_24dp"
                android:layout_marginRight="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:gravity="center"
                android:text="@string/login_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                app:activeBackground="@drawable/active_btn_bg"
                app:inactiveBackground="@drawable/inactive_btn_bg" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/forgetPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_32dp"
                android:text="@string/forget_password_label"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/text_16sp" />

            <com.facebook.login.widget.LoginButton
                style="@style/FacebookLoginButton"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_32dp"
                android:paddingBottom="@dimen/space_16dp"
                android:paddingTop="@dimen/space_16dp"
                app:com_facebook_login_text="@string/login_with_facebook"
                app:com_facebook_logout_text="@string/login_with_facebook" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>