<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_last_name_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_first_name_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nickname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_nick_name_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mail_address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password_label"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.wanpaku.pochi.infra.ui.widget.TwoStateButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginBottom="@dimen/space_16dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:gravity="center"
                android:text="@string/next_btn_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                app:activeBackground="@drawable/active_btn_bg"
                app:inactiveBackground="@drawable/inactive_btn_bg"
                app:isActive="false" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>