<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_name_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/breed_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/breed_type_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/input_dog_type_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/size_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/size_type_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/size_type"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/gender_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/gender_type_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/input_gender_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthday_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/input_birthday_label"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.wanpaku.pochi.infra.ui.widget.TwoStateButton
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginBottom="@dimen/space_16dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:layout_marginRight="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_8dp"
                android:gravity="center"
                android:text="@string/register_btn_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                app:activeBackground="@drawable/active_btn_bg"
                app:inactiveBackground="@drawable/inactive_btn_bg"
                app:isActive="false" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>