<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/dog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:text="@string/about_stay_dog"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_12sp" />

    <TextView
        android:id="@+id/dogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ポチ、ポンタ"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_16sp" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:text="@string/date"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/start_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/text_16sp"
            tools:text="2017年11月11日" />

        <TextView
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/start_date_text"
            android:text=" - "
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/text_16sp" />

        <TextView
            android:id="@+id/end_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/space"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/text_16sp"
            tools:text="2017年11月13日" />

    </RelativeLayout>


    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:text="@string/price"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_12sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2匹×2泊（3,000円/泊）=12,000円（税抜）"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_16sp" />

</merge>